--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
-}
+ "ConnectionStrings": {
+      "DefaultConnection": "Server=DESKTOP-GGH0SHG;Database=WifiIQTest;Trusted_Connection=True;"
+ },
+
+    "Logging": {
+      "LogLevel": {
+        "Default": "Warning"
+      }
+    },
+    "AllowedHosts": "*"
+  }
